adding idempotency to lambda
using the transactionsdata table to check if the transaction had been processed
ttl on the transaction is 24 hours. 
if it does not run, even with the long ttl, we will catch it with the failed fulfills report

--- a/graphql-api/serverless.yml
+++ b/graphql-api/serverless.yml
@@ -59,6 +59,7 @@ provider:
     INVESTIGATION_RESULTS_TABLE: 'InvestigationResults'
     CREDIT_SCORE_UPDATES_TABLE: 'CreditScoreTrackings'
     CREDIT_SCORE_HISTORY_TABLE: 'CreditScores'
+    TRANSACTIONS_DATA_TABLE: 'TransactionsData'
     ACCOUNT_ID: !Sub '${AWS::AccountId}'
     IDENTITY_ID: '${self:custom.settings.IDENTITY_IDS.${opt:stage}}'
     POOL_ID: '${self:custom.settings.POOL_IDS.${opt:stage}}'
@@ -113,6 +114,7 @@ provider:
         - !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${self:provider.environment.INVESTIGATION_RESULTS_TABLE}'
         - !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${self:provider.environment.CREDIT_SCORE_UPDATES_TABLE}'
         - !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${self:provider.environment.CREDIT_SCORE_HISTORY_TABLE}'
+        - !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${self:provider.environment.TRANSACTIONS_DATA_TABLE}'
 
 layers:
   TuCerts:
