--- a/graphql-api/serverless.yml
+++ b/graphql-api/serverless.yml
@@ -40,7 +40,7 @@ custom:
     APPDATA_STREAMS:
       dev: 'rr5wtr4ev5exlbutrkih3r5lhq:GetAtt:AppDataTable:StreamArn'
       qa: 'rr5wtr4ev5exlbutrkih3r5lhq:GetAtt:AppDataTable:StreamArn'
-      staging: 'mwxdv374n5gtxfao5ylbhdnce4:AppDataTable:StreamArn'
+      staging: 'mwxdv374n5gtxfao5ylbhdnce4:GetAtt:AppDataTable:StreamArn'
       prod: '4tpaga7rzjayhk75opsmpeurme:GetAtt:AppDataTable:StreamArn'
     APPTABLES:
       dev: 'AppData-rr5wtr4ev5exlbutrkih3r5lhq-dev'
