--- a/graphql-api/package.json
+++ b/graphql-api/package.json
@@ -30,6 +30,7 @@
     "dayjs": "^1.10.7",
     "es6-promise": "^4.2.8",
     "fast-xml-parser": "^3.21.1",
+    "flat": "^5.0.2",
     "he": "^1.2.0",
     "isomorphic-fetch": "^3.0.0",
     "jwk-to-pem": "^2.0.5",
