--- a/graphql-api/package.json
+++ b/graphql-api/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.92",
     "@types/jest": "^26.0.24",
+    "got": "^12.1.0",
     "serverless-bundle": "^5.3.0",
     "serverless-dotenv-plugin": "^3.12.2",
     "serverless-offline": "^8.8.0"
