--- a/web-api/producers/package.json
+++ b/web-api/producers/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.64",
     "@types/jest": "^26.0.14",
+    "got": "^12.1.0",
     "serverless-bundle": "^5.3.0",
     "serverless-dotenv-plugin": "^3.0.0",
     "serverless-offline": "^8.8.0"
